syntax = "proto3";

import "google/rpc/status.proto";

service Currency {
  // GetRate returns the exchange rate between currencies
  rpc GetRate(RateRequest) returns (RateResponse);
  rpc SubscribeRates(stream RateRequest) returns (stream RateResponse);
}

message RateRequest {
  // Base Currency
  Currencies Base = 1;
  // Target Conversion Currency
  Currencies Destination = 2;
}

message RateResponse {
  double Rate = 1;
}

message StreamingRateResponse {
  oneof message {
    RateResponse rate_response = 1;
    google.rpc.Status error = 2;
  }
}

// Currencies is an enum which represents the allowed currencies for the API
enum Currencies {
  EUR=0;
  USD=1;
  JPY=2;
  BGN=3;
  CZK=4;
  DKK=5;
  GBP=6;
  HUF=7;
  PLN=8;
  RON=9;
  SEK=10;
  CHF=11;
  ISK=12;
  NOK=13;
  HRK=14;
  RUB=15;
  TRY=16;
  AUD=17;
  BRL=18;
  CAD=19;
  CNY=20;
  HKD=21;
  IDR=22;
  ILS=23;
  INR=24;
  KRW=25;
  MXN=26;
  MYR=27;
  NZD=28;
  PHP=29;
  SGD=30;
  THB=31;
  ZAR=32;
}
